# AnonVote

./: Cargo.toml  LICENSE  README.md  RunClient.bat  RunServer.bat  Setup.bat  prerequisites  project_plan.txt
anonvote_client/: Cargo.toml
anonvote_client_cli/: Cargo.toml
anonvote_client_cli/src/: main.rs
anonvote_client_web/: .gitignore  package-lock.json  package.json
anonvote_client_web/public/: anonvote_wasm.js  index.html  index.js  style.css
anonvote_client_web/src/: app.js
anonvote_proto/: Cargo.toml  build.rs
anonvote_proto/proto/: anonvote.proto
anonvote_proto/src/: lib.rs
anonvote_proto/src/proto/: anonvote.rs
anonvote_server/: Cargo.toml
anonvote_server/src/: db.rs  main.rs  server_impl.rs
anonvote_server/src/model/: challenge_data.rs  user_data.rs
anonvote_wasm/: Cargo.toml
anonvote_wasm/src/: lib.rs
zkp_protocol/: Cargo.toml
zkp_protocol/src/: lib.rs
